tests/ui/range/range-pattern-out-of-bounds-issue-68972.stderr
error: literal out of range for `u8`
  --> $DIR/range-pattern-out-of-bounds-issue-68972.rs:5:14
   |
LL |         251..257 => {}
   |              ^^^ this value doesn't fit in `u8` whose maximum value is `255`

error: literal out of range for `u8`
  --> $DIR/range-pattern-out-of-bounds-issue-68972.rs:8:15
   |
LL |         251..=256 => {}
   |               ^^^ this value doesn't fit in `u8` whose maximum value is `255`

error: literal out of range for `u8`
  --> $DIR/range-pattern-out-of-bounds-issue-68972.rs:5:14
   |
LL |         251..257 => {}
   |              ^^^
   |
   = note: the literal `257` does not fit into the type `u8` whose range is `0..=255`
   = note: `#[deny(overflowing_literals)]` on by default

error: literal out of range for `u8`
  --> $DIR/range-pattern-out-of-bounds-issue-68972.rs:8:15
   |
LL |         251..=256 => {}
   |               ^^^
   |
   = note: the literal `256` does not fit into the type `u8` whose range is `0..=255`

error: aborting due to 4 previous errors

